standar variables & names

--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -39,6 +39,7 @@ Building a better future, one line of code at a time.
     <%= render partial: "lesli/partials/application-data" %>
     <%= render partial: "lesli/partials/application-lesli-scss" %>
     <meta name="turbo-prefetch" content="false">
+    <meta name="view-transition" content="same-origin" />
 </head>
 <body data-turbo="true" class="<%= application_body_class %>">
     <main id="lesli-application">
