--- a/app/views/lesli/partials/_application-lesli-javascript.html.erb
+++ b/app/views/lesli/partials/_application-lesli-javascript.html.erb
@@ -33,6 +33,7 @@ Building a better future, one line of code at a time.
 %>
 
 <%= javascript_importmap_tags %>
+<%= yield(:application_lesli_javascript) %>
 <%#
 <script src="https://js.honeybadger.io/v3.2/honeybadger.min.js" type="text/javascript"></script>
 <script type="text/javascript">
