add dynamic title

--- a/app/views/lesli/partials/_application-head.html.erb
+++ b/app/views/lesli/partials/_application-head.html.erb
@@ -40,7 +40,7 @@ Building a better future, one line of code at a time.
 <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
 
 <%# defines the title of the document. %>
-<title><%#= website_title %></title>
+<title><%= website_title %></title>
 
 <%# rails standard meta tags %>
 <%= csrf_meta_tags %>
