enable sidebar by engine

--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -47,7 +47,7 @@ Building a better future, one line of code at a time.
         <%= render partial: "lesli/partials/application-lesli-navigation" %>
         <%#= render partial: "lesli/partials/application-lesli-notifications" %>
         <section class="lesli-application-content">
-        <%#= render partial: "lesli/partials/application-lesli-sidebar" %>
+        <%= render partial: "lesli/partials/application-lesli-sidebar" %>
         <%= render partial: "lesli/partials/application-lesli-content" %>
         </section>
         <%#= render partial: "lesli/partials/application-lesli-engines" %>
