--- a/app/views/lesli/partials/_application-lesli-sidebar.html.erb
+++ b/app/views/lesli/partials/_application-lesli-sidebar.html.erb
@@ -33,7 +33,7 @@ Building a better future, one line of code at a time.
 %>
 
 <%# check if custom navigation partial exists, getting the path from application helper %>
-<% custom_sidebar_path = "#{lesli_engine.dig(:code)}/partials/engine-sidebar" %>
+<% custom_sidebar_path = "#{lesli_engine.dig(:code)}/partials/sidebar" %>
 
 <%# validate the path to be sure the partial exists when trying to render it %>
 <% custom_sidebar_exists = lookup_context.exists?(custom_sidebar_path, nil, true) %>
