feat: remove not used styles

--- a/lib/scss/layouts/application-header.scss
+++ b/lib/scss/layouts/application-header.scss
@@ -82,6 +82,13 @@ header.lesli-application-header {
                     position: absolute;
                 }
             }
+
+            .lesli-header-notifications {
+                .dropdown-content {
+                    box-shadow: none;
+                    background-color: transparent;
+                }
+            }
         }
     }
 }
