--- a/lib/scss/templates/public.scss
+++ b/lib/scss/templates/public.scss
@@ -42,12 +42,15 @@ Building a better future, one line of code at a time.
 // · Include Bulma 
 @import "lesli-css/bulma";
 
+@import "LesliView/forms/form";
+
 
 // · Font families and icons
 @import "Lesli/scss/fonts/mdicons";
 @import "Lesli/scss/fonts/families";
 @import "Lesli/scss/fonts/remixicons";
 
+@import "Lesli/scss/helpers/display";
 
 
 // · 
