add flash messages

--- a/app/views/lesli/partials/_application-lesli-header.html.erb
+++ b/app/views/lesli/partials/_application-lesli-header.html.erb
@@ -84,7 +84,7 @@ Building a better future, one line of code at a time.
 
                                 <!-- notifications -->
                                 <% if defined?(LesliBell) %>
-                                    <div class="dropdown is-hoverable">
+                                    <div class="dropdown is-hoverable lesli-header-notifications">
                                         <div class="dropdown-trigger">
                                             <a>
                                                 <span class="ri-notification-3-line">
