--- a/app/views/lesli/wrappers/_application-devise.html.erb
+++ b/app/views/lesli/wrappers/_application-devise.html.erb
@@ -58,7 +58,7 @@ Building a better future, one line of code at a time.
                             :class => "#{lesli_instance_code}-logo mb-2",  # dynamic class according to the instance
                             :alt => "Main logo") 
                         %>
-                        <h1 class="has-text-primary">
+                        <h1 class="is-title is-size-3 has-text-primary">
                             <%#= I18n.t("core.users/sessions.view_text_welcome") %>
                             <%= title %>
                         </h1>
