--- a/app/assets/stylesheets/lesli/templates/public.css
+++ b/app/assets/stylesheets/lesli/templates/public.css
@@ -1,6 +1,6 @@
-/*!*************************************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js??clonedRuleSet-7.use[1]!./node_modules/sass-loader/dist/cjs.js!./lib/scss/templates/public.scss ***!
-  \*************************************************************************************************************************************************/
+/*!*****************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js??ruleSet[1].rules[0].use[1]!./node_modules/sass-loader/dist/cjs.js!./lib/scss/templates/public.scss ***!
+  \*****************************************************************************************************************************************************/
 @charset "UTF-8";
 /*
 
@@ -15741,6 +15741,84 @@ along with this program. If not, see http://www.gnu.org/licenses/.
 
 Lesli · Ruby on Rails SaaS Development Framework.
 
+Made with ♥ by LesliTech
+Building a better future, one line of code at a time.
+
+@contact  hello@lesli.tech
+@website  https://www.lesli.tech
+@license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+
+// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+// · 
+*/
+.lesli-form-field .field:not(.is-horizontal) .field-label {
+  text-align: left;
+}
+
+.lesli-form-fieldset {
+  padding: 2.5rem 2rem;
+  border-radius: 5px;
+  background-color: #fff;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+}
+.lesli-form-fieldset fieldset {
+  padding: 1.2rem;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 1rem;
+}
+
+form fieldset.is-warning {
+  border: 2px solid var(--bulma-warning);
+  background-color: var(--bulma-warning-95);
+}
+
+form fieldset.is-warning h5 {
+  color: var(--bulma-warning-bold);
+  font-weight: 600;
+}
+
+form fieldset.is-info {
+  border: 2px solid var(--bulma-info);
+  background-color: var(--bulma-info-95);
+}
+
+form fieldset.is-info h5 {
+  color: var(--bulma-info-bold);
+  font-weight: 600;
+}
+
+form fieldset.is-danger {
+  border: 2px solid var(--bulma-danger);
+  background-color: var(--bulma-danger-95);
+}
+
+form fieldset.is-danger h5 {
+  color: var(--bulma-danger-bold);
+  font-weight: 600;
+}
+
+/*
+
+Lesli
+
+Copyright (c) 2023, Lesli Technologies, S. A.
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see http://www.gnu.org/licenses/.
+
+Lesli · Ruby on Rails SaaS Development Framework.
+
 Made with ♥ by https://www.lesli.tech
 Building a better future, one line of code at a time.
 
@@ -26113,6 +26191,46 @@ Building a better future, one line of code at a time.
 
 .ri-verified-badge-line:before {
   content: "\f3e9";
+}
+
+/*
+
+Lesli
+
+Copyright (c) 2023, Lesli Technologies, S. A.
+
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see http://www.gnu.org/licenses/.
+
+Lesli · Ruby on Rails SaaS development platform.
+
+Made with ♥ by https://www.lesli.tech
+Building a better future, one line of code at a time.
+
+@contact  hello@lesli.tech
+@website  https://www.lesli.tech
+@license  GPLv3 http://www.gnu.org/licenses/gpl-3.0.en.html
+
+// · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
+// ·  
+
+*/
+.is-fullwidth {
+  width: 100%;
+}
+
+.hover:hover {
+  cursor: pointer;
 }
 
 html,
