--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -45,7 +45,7 @@ Building a better future, one line of code at a time.
     <main id="lesli-application">
         <%= render partial: "lesli/partials/application-lesli-header" %>
         <%= render partial: "lesli/partials/application-lesli-navigation" %>
-        <%#= render partial: "lesli/partials/application-lesli-notifications" %>
+        <%= render partial: "lesli/partials/application-lesli-notifications" %>
         <section class="lesli-application-content">
         <%= render partial: "lesli/partials/application-lesli-sidebar" %>
         <%= render partial: "lesli/partials/application-lesli-content" %>
