--- a/app/views/lesli/partials/_application-public-javascript.html.erb
+++ b/app/views/lesli/partials/_application-public-javascript.html.erb
@@ -35,14 +35,11 @@ Building a better future, one line of code at a time.
 
 <% is_devise = controller_path.split('/')[0] == "users" %>
 
-
 <%# Load specific javascript files for devise actions (login,register,etc) %>
-<%= javascript_include_tag("lesli/#{controller_path}") if is_devise %>
-
+<%#= javascript_include_tag("lesli/#{controller_path}") if is_devise %>
 
 <%# Load standard files %>
 <%#= javascript_include_tag(application_javascript_path()) unless is_devise %> 
-
 
 <%# Set language for JavaScript apps %>
 <script>
