--- a/lib/scss/layouts/application-notification.scss
+++ b/lib/scss/layouts/application-notification.scss
@@ -12,6 +12,7 @@ section.application-lesli-notifications {
 
     .notification {
         animation: fadeOut 5s forwards;
+        border: 2px solid;
     }
 }
 
