--- a/app/views/lesli/shared/dashboards/_show.html.erb
+++ b/app/views/lesli/shared/dashboards/_show.html.erb
@@ -1,4 +1,4 @@
-/*
+<%#
 
 Lesli
 
@@ -28,24 +28,31 @@ Building a better future, one line of code at a time.
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // · 
-*/
+%>
 
+<%
+hour = Time.current.hour  # Returns the hour (0–23) based on the app's timezone
+welcome_options = ["Good morning", "Good afternoon", "Good evening"]
+welcome_text = ""
 
-// · 
-@import "lesli-css";
+if hour < 12
+  welcome_text = welcome_options.first
+elsif hour < 18
+  welcome_text = welcome_options.second
+else
+  welcome_text = welcome_options.third
+end
+%>
 
+<%= render(LesliView::Layout::Container.new("dashboards-show")) do %>
 
-// · Configuration & variables
-@import "Lesli/scss/settings/variables";
+    <section class="lesli-element-header is-flex mt-6">
+        <div class="lesli-element-header-title">
+            <h1 class="subtitle is-size-3 mb-0"><%= welcome_text %>, <%= current_user.full_name %>.</h1>
+            <p class=""><%= Date2.new.date_words %>.</p>
+        </div>
+    </section>
 
+    <%= render(LesliView::Elements::Empty.new(text:"Empty dashboard")) %>
 
-// · 
-aside.lesli-application-sidebar {
-    display: none !important;
-}
-
-
-// · 
-.lesli-empty {
-    padding: 8rem 0;
-}
+<% end %>
