--- a/app/views/lesli/apps/show.html.erb
+++ b/app/views/lesli/apps/show.html.erb
@@ -9,6 +9,7 @@
                 <%# 03. Productivity & Teamwork%>
                 <%= navigation_engine_calendar %>
                 <%= navigation_engine_bell %>
+                <%= navigation_engine_papers %>
 
                 <%# 05. Analytics %>
                 <%= navigation_engine_audit %>
