--- a/lib/scss/layouts/application-app.scss
+++ b/lib/scss/layouts/application-app.scss
@@ -30,6 +30,6 @@ Building a better future, one line of code at a time.
 */
 
 // · 
-section.lesli-application-content {
+main.lesli-application-app {
     display: flex;
 }
