--- a/app/views/lesli/layouts/application-lesli.html.erb
+++ b/app/views/lesli/layouts/application-lesli.html.erb
@@ -1,5 +1,4 @@
-<%
-=begin
+<%#
 
 Lesli
 
@@ -29,7 +28,6 @@ Building a better future, one line of code at a time.
 
 // · ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~     ~·~
 // · 
-=end
 %>
 
 <!DOCTYPE html>
@@ -38,18 +36,14 @@ Building a better future, one line of code at a time.
     <%= render partial: "lesli/partials/application-head" %>
     <%= render partial: "lesli/partials/application-data" %>
     <%= render partial: "lesli/partials/application-lesli-scss" %>
-    <meta name="turbo-prefetch" content="false">
-    <meta name="view-transition" content="same-origin" />
 </head>
 <body data-turbo="true" class="<%= application_body_class %>">
-    <main id="lesli-application">
-        <%= render partial: "lesli/partials/application-lesli-header" %>
-        <%= render partial: "lesli/partials/application-lesli-navigation" %>
-        <%= render partial: "lesli/partials/application-lesli-notifications" %>
-        <section class="lesli-application-content">
+    <%= render partial: "lesli/partials/application-lesli-header" %>
+    <%= render partial: "lesli/partials/application-lesli-navigation" %>
+    <%= render partial: "lesli/partials/application-lesli-notifications" %>
+    <main class="lesli-application-app">
         <%= render partial: "lesli/partials/application-lesli-sidebar" %>
         <%= render partial: "lesli/partials/application-lesli-content" %>
-        </section>
     </main>
     <%= render partial: "lesli/partials/application-lesli-javascript" %>
     <%= render partial: "lesli/partials/application-lesli-icons" %>
