Fix time parser for dashboard layout

--- a/app/views/lesli/shared/dashboards/_show.html.erb
+++ b/app/views/lesli/shared/dashboards/_show.html.erb
@@ -31,7 +31,7 @@ Building a better future, one line of code at a time.
 %>
 
 <%
-hour = Time.current.hour  # Returns the hour (0–23) based on the app's timezone
+hour = Date2.new.date.get.hour  # Returns the hour (0–23) based on the app's timezone
 welcome_options = ["Good morning", "Good afternoon", "Good evening"]
 welcome_text = ""
 
